<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="doc">Пользовательское соглашение</string>
    <string name="email">pioneer.of.galaxies@gmail.com</string>
    <string name="theme_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="main_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="ref_doc">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="ref_educ">Ссылка на курс: https://practicum.yandex.ru/android-developer/?ysclid=mtqhg0vhn072406614</string>
    <string name="search_nothing">Ничего не нашлось</string>
    <string name="search_error_title">Проблемы со связью.</string>
    <string name="search_error_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history_message">Вы искали</string>
    <string name="search_clear_history_message">Очистить историю</string>
    <string name="refresh">Обновить</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>