<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/main_size"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/main_but_marg"
            android:layout_weight="1"
            app:cornerRadius="@dimen/main_but_rad"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/main_but_marg"
            app:icon="@drawable/vector"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/main_icon_text"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/main_icon_text"
            android:textSize="@dimen/main_size"
            />

        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cornerRadius="@dimen/main_but_rad"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/main_but_marg"
            android:layout_marginTop="@dimen/main_but_marg"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/main_icon_text"
            android:text="@string/media"
            android:textAllCaps="false"
            android:textColor="@color/main_icon_text"
            android:textSize="@dimen/main_size"/>

        <Button
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            app:cornerRadius="@dimen/main_but_rad"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/main_but_marg"
            app:icon="@drawable/group"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/main_icon_text"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textColor="@color/main_icon_text"
            android:textSize="@dimen/main_size"/>

    </LinearLayout>

</LinearLayout>