<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/SetSerBack"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:title="@string/search"
        app:titleTextAppearance="@style/Toolbar"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:navigationIconTint="@color/theme_text_activity"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/search_line_background"
        >

        <EditText
            android:id="@+id/EditTextLine"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:inputType="text"
            android:hint="@string/search"
            android:lines="1"
            android:maxLength="20"
            android:background="@null"
            android:textColorHint="@color/search_icon_text"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:focusable="true"
            android:drawableStart="@drawable/ic_search_36"
            android:drawablePadding="8dp"
            android:drawableTint="@color/search_icon_text"
            android:paddingStart="13dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_clear_36"
            android:scaleType="center"
            android:visibility="gone"
            android:layout_gravity="end"
            app:tint="@color/search_icon_text"
            />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracksList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/placeholderEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="102dp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholderEmptyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder_empty_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search_nothing"
            android:textColor="@color/theme_text_activity"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textSize="19sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholderError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="102dp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/placeholderErrorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder_error_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search_error_title"
            android:textColor="@color/theme_text_activity"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textSize="19sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search_error_message"
            android:textColor="@color/theme_text_activity"
            android:gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textSize="19sp"/>

        <Button
            android:id="@+id/refreshButton"
            style="@style/SearchRefreshButton"
            android:layout_marginTop="16dp"
            android:text="@string/refresh"
            />
    </LinearLayout>

</LinearLayout>