<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_sear_back_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftTopBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightTopBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBottomBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBottomBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/attributeBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="durationTag,albumTag,yearTag,genreTag,countryTag"
            app:barrierDirection="end" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/albumBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="albumTag,albumValueTag"
            app:barrierDirection="bottom" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/albumGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="album, albumValue" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/yearGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="year, yearValue" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:titleTextAppearance="@style/Toolbar"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:navigationIconTint="@color/theme_text_activity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="312dp"
            android:layout_height="312dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@id/leftTopBorder"
            app:layout_constraintEnd_toEndOf="@id/rightTopBorder"
            android:layout_marginTop="26dp"
            />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/artwork"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/leftTopBorder"
            app:layout_constraintEnd_toEndOf="@id/rightTopBorder"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textSize="22sp"
            android:textColor="@color/YP_Black_white"
            />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/trackName"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/leftTopBorder"
            app:layout_constraintEnd_toEndOf="@id/rightTopBorder"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textSize="14sp"
            android:textColor="@color/YP_Black_white"
            />

        <ImageButton
            android:id="@+id/playlistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_playlistbutton_51"
            android:background="@android:color/transparent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/leftTopBorder"
            app:layout_constraintEnd_toStartOf="@+id/pauseResumeButton"
            app:layout_constraintTop_toTopOf="@id/pauseResumeButton"
            app:layout_constraintBottom_toBottomOf="@id/pauseResumeButton"
            />

        <ImageButton
            android:id="@+id/pauseResumeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pausebutton_100"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/artistName"
            app:layout_constraintStart_toEndOf="@id/playlistButton"
            app:layout_constraintEnd_toStartOf="@+id/likeButton"
            android:layout_marginTop="30dp"
            />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nonlike_button_51"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@+id/pauseResumeButton"
            app:layout_constraintEnd_toEndOf="@id/rightTopBorder"
            app:layout_constraintTop_toTopOf="@id/pauseResumeButton"
            app:layout_constraintBottom_toBottomOf="@id/pauseResumeButton"
            />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/YP_Black_white"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:textFontWeight="500"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/pauseResumeButton"
            app:layout_constraintStart_toStartOf="@+id/pauseResumeButton"
            app:layout_constraintEnd_toEndOf="@+id/pauseResumeButton"
            android:layout_marginTop="4dp"
            />

        <TextView
            android:id="@+id/duration"
            app:layout_constraintTag="durationTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center"
            android:text="@string/duration"
            android:textColor="@color/YP_Text_Gray"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintStart_toStartOf="@id/leftBottomBorder"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/durationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center_vertical|end"
            android:textColor="@color/YP_Black_white"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintTop_toTopOf="@+id/duration"
            app:layout_constraintEnd_toEndOf="@id/rightBottomBorder"
            app:layout_constraintStart_toEndOf="@id/attributeBarrier"

            />
        <TextView
            android:id="@+id/album"
            app:layout_constraintTag="albumTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center"
            android:text="@string/album"
            android:textColor="@color/YP_Text_Gray"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintTop_toBottomOf="@+id/duration"
            app:layout_constraintStart_toStartOf="@id/leftBottomBorder"
            />

        <TextView
            android:id="@+id/albumValue"
            app:layout_constraintTag="albumValueTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center_vertical|end"
            app:layout_constraintBaseline_toBaselineOf="@+id/album"
            android:textColor="@color/YP_Black_white"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintEnd_toEndOf="@id/rightBottomBorder"
            app:layout_constraintStart_toEndOf="@id/attributeBarrier"
            />
        <TextView
            android:id="@+id/year"
            app:layout_constraintTag="yearTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/YP_Text_Gray"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintTop_toBottomOf="@+id/albumBarrier"
            app:layout_constraintStart_toStartOf="@id/leftBottomBorder"
            />

        <TextView
            android:id="@+id/yearValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center_vertical|end"
            android:textColor="@color/YP_Black_white"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintTop_toTopOf="@+id/year"
            app:layout_constraintEnd_toEndOf="@id/rightBottomBorder"
            app:layout_constraintStart_toEndOf="@id/attributeBarrier"
            />
        <TextView
            android:id="@+id/genre"
            app:layout_constraintTag="genreTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center"
            android:text="@string/genre"
            android:textColor="@color/YP_Text_Gray"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintTop_toBottomOf="@+id/year"
            app:layout_constraintStart_toStartOf="@id/leftBottomBorder"
            />

        <TextView
            android:id="@+id/genreValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center_vertical|end"
            android:textColor="@color/YP_Black_white"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintTop_toTopOf="@+id/genre"
            app:layout_constraintEnd_toEndOf="@id/rightBottomBorder"
            app:layout_constraintStart_toEndOf="@id/attributeBarrier"
            />
        <TextView
            android:id="@+id/country"
            app:layout_constraintTag="countryTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center"
            android:text="@string/country"
            android:textColor="@color/YP_Text_Gray"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintStart_toStartOf="@id/leftBottomBorder"
            />

        <TextView
            android:id="@+id/countryValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:gravity="center_vertical|end"
            android:textColor="@color/YP_Black_white"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="13sp"
            android:textFontWeight="400"
            app:layout_constraintTop_toTopOf="@+id/country"
            app:layout_constraintEnd_toEndOf="@id/rightBottomBorder"
            app:layout_constraintStart_toEndOf="@id/attributeBarrier"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>